--- a/_posts/2018-06-21-grams.markdown
+++ b/_posts/2018-06-21-grams.markdown
@@ -1,14 +1,8 @@
 ---
-title: grams
-date: 2018-06-21
+title: Grams
+weight: 60
+date: 2014-01-01
 images:
- - NightLightNO1_DSANTOS.jpg
- - Grams_14dominicsantos.jpg
+  - grams-dominicsantos.jpg
 ---
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+“Grams” 2014. Inkjet photos and plastic ziplock bag. 1x1”
