--- a/_posts/2014-01-01-grams.markdown
+++ b/_posts/2014-01-01-grams.markdown
@@ -5,4 +5,4 @@ date: 2014-01-01
 images:
   - grams-dominicsantos.jpg
 ---
-“Grams” 2014. Inkjet photos and plastic ziplock bag. 1x1”
+“Grams” 2014. Inkjet photos and plastic ziplock bag. 1x1in.
