--- a/_posts/2018-07-19-baby.markdown
+++ b/_posts/2018-07-19-baby.markdown
@@ -5,4 +5,4 @@ date: 2014-08-01
 images:
   - baby-dominicsantos.jpg
 ---
-“Baby & Glued to You” Music Video for Tomorrows Tulips — August 2014
+“Baby & Glued to You” Music Video for _Tomorrows Tulips_ — August 2014
