--- a/_posts/2014-01-01-burst.markdown
+++ b/_posts/2014-01-01-burst.markdown
@@ -5,4 +5,4 @@ date: 2014-01-01
 images:
   - burst-dominicsantos.jpg
 ---
-“Burst” 2014. Inkjet print,  20x14”
+“Burst” 2014. Inkjet print, 20x14in.
