--- a/_projects/2018-07-19-baby.markdown
+++ b/_projects/2018-07-19-baby.markdown
@@ -3,6 +3,6 @@ title: Baby
 weight: 120
 date: 2014-08-01
 images:
-  - baby-dominicsantos.jpg
+  - baby-dominicsantos
 ---
 Music Video Direction with Alex Knost and Taylor Bonin. “Baby & Glued to You” by _Tomorrows Tulips_. — August 2014
