--- a/_projects/2018-07-19-baby.markdown
+++ b/_projects/2018-07-19-baby.markdown
@@ -4,5 +4,6 @@ weight: 120
 date: 2014-08-01
 images:
   - baby-dominicsantos
+permalink: https://vimeo.com/217094076
 ---
 Music Video Direction with Alex Knost and Taylor Bonin. “Baby & Glued to You” by _Tomorrows Tulips_. — August 2014
