--- a/_projects/2018-07-19-baby.markdown
+++ b/_projects/2018-07-19-baby.markdown
@@ -7,4 +7,4 @@ images:
 permalink: https://youtu.be/ANlwsJnvmaQ
 
 ---
-Music Video Direction with Alex Knost and Taylor Bonin. “Baby & Glued to You” by _Tomorrows Tulips_. [Watch here](https://youtu.be/ANlwsJnvmaQ). — August 2014
+Music Video Direction with Alex Knost and Taylor Bonin. “Baby & Glued to You” by _Tomorrows Tulips_.
